<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<View
    android:id="@+id/footLine"
    android:layout_marginEnd="32dp"
    android:background="?colorAccent"
    android:layout_width="match_parent"
    android:layout_height="6dp"/>
    <TextView
        android:id="@+id/footTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/guestBook"
        android:textColor="?colorAccent"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:text="@string/more"
        android:padding="12dp"
        android:textColor="?colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write"
        android:textSize="20sp"
        android:textColor="?colorAccent"
        android:clickable="true"/>
</LinearLayout>